Fix some vertical spacing issues with components

--- a/wagtailatomicadmin/static_src/wagtailadmin/scss/components/_forms.scss
+++ b/wagtailatomicadmin/static_src/wagtailadmin/scss/components/_forms.scss
@@ -1231,6 +1231,7 @@ li.inline:first-child {
 
     .field {
         @include row();
+        padding-top: 20px;
     }
 
     .field-content {
