--- a/wagtailatomicadmin/static_src/wagtailadmin/scss/components/_streamfield.scss
+++ b/wagtailatomicadmin/static_src/wagtailadmin/scss/components/_streamfield.scss
@@ -7,7 +7,7 @@ li.sequence-member {
     background: $color-sequence-bg;
     border: 1px solid $color-grey-3;
     border-radius: 4px;
-    margin: 1.5em 0;
+    margin: 0em 0 1.5em 0;
 
     .sequence-member {
       background: white;
